--- a/src/styles/typing-efect.css
+++ b/src/styles/typing-efect.css
@@ -1,5 +1,6 @@
 .typing-text {
   display: inline-block;
+  overflow: hidden;
   white-space: nowrap;
   border-right: 2px solid white;
   width: 0;
