--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,11 @@
 @import "tailwindcss";
 @custom-variant dark (&:where(.dark, .dark *));
 
-*{
-    scroll-behavior: smooth;
+* {
+  scroll-behavior: smooth;
 }
-
-.caprasimo-regular {
-  font-family: "Caprasimo", serif;
+.commic-text {
+  font-family: "Bangers", system-ui !important;
   font-weight: 400;
   font-style: normal;
 }
