--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,9 @@
 
 * {
   scroll-behavior: smooth;
-  background-image: url('./assets/backgrounds/global-background.jpg');
+}
+body {
+  background-image: url("./assets/backgrounds/global-background.jpg");
 }
 .commic-text {
   font-family: "Bangers", system-ui !important;
