--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -4,3 +4,13 @@
   box-shadow: 18px 18px 0px 3px black;
   transition: 0.5s;
 }
+
+.button-download {
+  border: black solid 3px;
+  border-radius: 10px;
+  box-shadow: 4px 8px 0px 2px black;
+  transition: all 0.5s;
+}
+.button-download:hover {
+  box-shadow: none;
+}
