--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,3 +1,4 @@
+
 .button-nav {
   transition: 0.5s;
   box-shadow: 3px 4px 0px 1px black;
@@ -5,4 +6,7 @@
 
 .button-nav:hover {
   box-shadow: none
+}
+.backBlur{
+  backdrop-filter: blur(3px);
 }
